# Arxivr

./: main.py  pyproject.toml  weather.py
baml_client/: async_client.py  inlinedbaml.py  partial_types.py  sync_client.py  type_builder.py  types.py
baml_src/: chat.baml  models.baml  reasoning_agent.baml
baml_src/config/: clients.baml
src/: chat-history.py  multi-modal.py  partial-stream.py  toolcalltest.py
src/baml_client/: async_client.py  inlinedbaml.py  partial_types.py  sync_client.py  type_builder.py  types.py
src/baml_src/: chain_think.baml  chat-history.baml  classification.baml  clients.baml  multimodal.baml  resume.baml  symbolTuning.baml  toolCalling.baml
src/models/: agents.py  chats.py  tools.py
src/services/: chat_service.py
src/tests/: baml_agents.py
src/tools/: choose_tool.py
