[project]
name = "arxivr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "baml-py>=0.73.4",
    "beautifulsoup4>=4.12.3",
    "pydantic>=2.10.6",
    "pydantic-ai>=0.0.20",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]
